# Email-Tool

./: .gitignore  Cargo.toml  README.md  anwser_template.txt  message_template.txt  secret.json
.github/workflows/: rust.yml  ubuntu.yml  windows.yml
src/: email_extension.rs  email_utils.rs  gmail.rs  hub_extension.rs  main.rs  message_interpreter.rs
