[package]
name = "email-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-gmail1 = "5.*"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
dotenvy = "0.15.7"
async-trait = "*"